--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -1,12 +1,195 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>메뉴</title>
+    <title>짐캐리 | 검색페이지</title>
+    <link rel="icon" href="/image/favicon.png">
+    <link rel="stylesheet" href="../../static/css/order/list.css">
+    <link rel="stylesheet" href="../../static/css/main/header.css">
 </head>
 <body>
-    
+<header th:insert="~{main/header.html :: mainHeader}"></header>
+<!--<th:block th:replace="~{/header.html :: #main-header}"/>-->
+<div class="container">
+    <div class="search-title-search-div">
+        <h3 class="search-title">전체보기</h3>
+        <div class="search-window-layout">
+            <form action="/storages/search/keyword" class="search__searchbox__form" name="searchForm" method="post">
+                <input class="search-detail-address" name="storageAddress" id="gnb_search" placeholder="주소를 입력해주세요" required="">
+                <button class="search-button" type="button" id="submit" aria-label="submit"></button>
+            </form>
+        </div>
+    </div>
+    <ul class="place-ul">
+        <li class="place-li">
+            <a th:href="@{''}" class="place">전체보기</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'서울'}" class="place">서울특별시</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'경기'}" class="place">경기도</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'강원'}" class="place">강원도</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'충북'}" class="place">충청북도</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'충남'}" class="place">충청남도</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'경북'}" class="place">경상북도</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'경남'}" class="place">경상남도</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'전북'}" class="place">전라북도</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'전남'}" class="place">전라남도</a>
+        </li>
+        <li class="place-li">
+            <a th:href="@{'제주특별자치도'}" class="place">제주도</a>
+        </li>
+    </ul>
+    <div class="result">
+        <div class="filter-container">
+            <div class="filter-title">
+                <span class="filter-text">필터</span>
+            </div>
+            <div class="filter-select">
+                <div class="filter-select-text">규모</div>
+                <ul>
+                    <li class="filter-select-li">
+                        <button class="filter-select-button" data-check="0">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M23.5 12C23.5 18.3513 18.3513 23.5 12 23.5C5.64873 23.5 0.5 18.3513 0.5 12C0.5 5.64873 5.64873 0.5 12 0.5C18.3513 0.5 23.5 5.64873 23.5 12Z" stroke="#ddd" fill="none" class="filter-path"></path>
+                                <path d="M7 12.6667L10.3846 16L18 8.5" stroke="#ddd" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </button>
+                        <span class="select-text">특대</span>
+                    </li>
+                    <li class="filter-select-li">
+                        <button class="filter-select-button" data-check="0">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M23.5 12C23.5 18.3513 18.3513 23.5 12 23.5C5.64873 23.5 0.5 18.3513 0.5 12C0.5 5.64873 5.64873 0.5 12 0.5C18.3513 0.5 23.5 5.64873 23.5 12Z" stroke="#ddd" fill="none" class="filter-path"></path>
+                                <path d="M7 12.6667L10.3846 16L18 8.5" stroke="#ddd" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </button>
+                        <span class="select-text">대</span>
+                    </li>
+                    <li class="filter-select-li">
+                        <button class="filter-select-button" data-check="0">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M23.5 12C23.5 18.3513 18.3513 23.5 12 23.5C5.64873 23.5 0.5 18.3513 0.5 12C0.5 5.64873 5.64873 0.5 12 0.5C18.3513 0.5 23.5 5.64873 23.5 12Z" stroke="#ddd" fill="none" class="filter-path"></path>
+                                <path d="M7 12.6667L10.3846 16L18 8.5" stroke="#ddd" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </button>
+                        <span class="select-text">중</span>
+                    </li>
+                    <li class="filter-select-li">
+                        <button class="filter-select-button" data-check="0">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M23.5 12C23.5 18.3513 18.3513 23.5 12 23.5C5.64873 23.5 0.5 18.3513 0.5 12C0.5 5.64873 5.64873 0.5 12 0.5C18.3513 0.5 23.5 5.64873 23.5 12Z" stroke="#ddd" fill="none" class="filter-path"></path>
+                                <path d="M7 12.6667L10.3846 16L18 8.5" stroke="#ddd" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </button>
+                        <span class="select-text">소</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="result-content">
+            <div class="result-title">
+                <div class="total-number" th:text="'총 ' + ${total} + '건'">
+                    총 56건
+                </div>
+                <ul class="array-ul">
+                    <li class="array-li">
+                        <a class="array-a-select">
+                            최신순
+                        </a>
+                    </li>
+                    <li class="array-li">
+                        <a class="array-a">
+                            가격순
+                        </a>
+                    </li>
+                    <li class="array-li">
+                        <a class="array-a">
+                            리뷰많은순
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="result-real-body">
+                <!-- a태그 반복 -->
+                <a href="/storages/search/detail/${e.storageId}" class="product">
+                    <div class="product-img-div">
+                        <img src="/storages/search/files/display?fileName=${e.files[0].filePath + '/' + e.files[0].fileUuid + '_' + e.files[0].fileOrgName}">
+                    </div>
+                    <div class="product-explain">
+                        <span class="product-title">${e.storageTitle}</span>
+                        <span class="product-short-explain">${e.storageAddress}</span>
+                    </div>
+                    <div class="product-price-div">
+                        <span class="product-price">
+                            ${e.storagePrice}원
+                        </span>
+                    </div>
+                    <div class="review-count-div">
+                        <span class="review-img">
+                            <svg width="100%" height="100%" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <mask id="path-1-inside-1_1513_17755" fill="white">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M3 2C1.89543 2 1 2.89543 1 4V8.67201C1 9.77658 1.89543 10.672 3 10.672H5.11212L6.33682 12.7653C6.5299 13.0954 7.00688 13.0954 7.19995 12.7653L8.42465 10.672H10.5C11.6046 10.672 12.5 9.77658 12.5 8.67201V4C12.5 2.89543 11.6046 2 10.5 2H3Z"></path>
+                                </mask>
+                                <path fill="#999" d="M5.11212 10.672L5.97526 10.167L5.68564 9.67201H5.11212V10.672ZM6.33682 12.7653L5.47369 13.2703L5.47369 13.2703L6.33682 12.7653ZM7.19995 12.7653L6.33682 12.2604L6.33682 12.2604L7.19995 12.7653ZM8.42465 10.672V9.67201H7.85113L7.56152 10.167L8.42465 10.672ZM2 4C2 3.44772 2.44772 3 3 3V1C1.34315 1 0 2.34315 0 4H2ZM2 8.67201V4H0V8.67201H2ZM3 9.67201C2.44772 9.67201 2 9.22429 2 8.67201H0C0 10.3289 1.34315 11.672 3 11.672V9.67201ZM5.11212 9.67201H3V11.672H5.11212V9.67201ZM7.19995 12.2604L5.97526 10.167L4.24899 11.177L5.47369 13.2703L7.19995 12.2604ZM6.33682 12.2604C6.5299 11.9304 7.00688 11.9304 7.19995 12.2604L5.47369 13.2703C6.05291 14.2604 7.48386 14.2604 8.06309 13.2703L6.33682 12.2604ZM7.56152 10.167L6.33682 12.2604L8.06309 13.2703L9.28779 11.177L7.56152 10.167ZM10.5 9.67201H8.42465V11.672H10.5V9.67201ZM11.5 8.67201C11.5 9.22429 11.0523 9.67201 10.5 9.67201V11.672C12.1569 11.672 13.5 10.3289 13.5 8.67201H11.5ZM11.5 4V8.67201H13.5V4H11.5ZM10.5 3C11.0523 3 11.5 3.44772 11.5 4H13.5C13.5 2.34315 12.1569 1 10.5 1V3ZM3 3H10.5V1H3V3Z" mask="url(#path-1-inside-1_1513_17755)"></path>
+                                <circle fill="#999" cx="4.34998" cy="6.17871" r="0.75"></circle>
+                                <circle fill="#999" cx="6.75" cy="6.17871" r="0.75"></circle>
+                                <circle fill="#999" cx="9.15002" cy="6.17871" r="0.75"></circle>
+                            </svg>
+                        </span>
+                        후기
+                        <span class="review-number">${e.reviewCount}</span>
+                    </div>
+                </a>
+                <!-- -------------------------------- -->
+            </div>
+            <div class="paging-div" th:object="${pagination}">
+                <div class="paging" style="text-align: center">
+                    <a class="changePage" onclick="findPage(this)" th:href="'?page=' + *{startPage - 1}" th:if="*{prev}" style="color: black"><code><</code></a>
+                    <th:block th:each="page:${#numbers.sequence(pagination.startPage, pagination.endPage)}">
+                        <a class="changePage" onclick="findPage(this)" style="color: black" th:href="'?page=' + ${page}" th:if="${pagination.criteria.page != page}"><code th:text="${page}"></code></a>
+                        <code id="currentPage" th:unless="${pagination.criteria.page != page}" th:text="${page}"></code>
+                    </th:block>
+                    <a class="changePage" onclick="findPage(this)" th:href="'?page=' + ${pagination.endPage + 1}" th:if="*{next}" style="color: black"><code>></code></a>
+                </div>
+                <form th:action="@{/storages/search}" th:object="${criteria}" name="pageForm">
+                    <input type="hidden" th:field="*{page}">
+                    <input type="hidden" th:field="*{amount}">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- <footer th:insert="~{main/footer.html :: mainFooter}"></footer> -->
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<!-- <script th:inline="javascript">
+    let storage = [[${storage}]];
+    let headerStorageAddressNumber = [[${storageAddressNumber}]];
+</script> -->
+<!-- <script src="/js/main/search-page.js"></script>
+<script src="/js/main/header.js"></script>
+<script src="/js/main/filter.js"></script> -->
+<script>
+    // function clickPreventDefault(event){
+    //     event.preventDefault();
+    // }
+</script>
 </html>
