--- a/src/main/resources/templates/product/product_detail.html
+++ b/src/main/resources/templates/product/product_detail.html
@@ -27,15 +27,15 @@
             </div>
             <div class="product-order">
                 <div class="product-detail">
-                    <span class="product-detail-text">상품 이름</span>
+                    <span class="product-detail-title">상품 이름</span>
                     <span class="product-name">사과</span>
                 </div>
                 <div class="product-detail">
-                    <span class="product-detail-text">상품 설명</span>
+                    <span class="product-detail-title">상품 설명</span>
                     <div>상품 설명 쫙</div>
                 </div>
                 <div class="product-detail">
-                    <span class="product-detail-text">호수</span>
+                    <span class="product-detail-title">호수</span>
                     <select name="" id="">
                         <option value="">1호</option>
                         <option value="">2호</option>
@@ -44,18 +44,22 @@
                     </select>
                 </div>
                 <div class="product-detail">
-                    <span class="product-detail-text">키로수</span>
+                    <span class="product-detail-title">키로수</span>
                     <select name="" id="">
                         <option value="">5kg</option>
                         <option value="">10kg</option>
                     </select>
                 </div>
                 <div class="product-detail">
-                    <span class="product-detail-text">수량</span>
+                    <span class="product-detail-title">수량</span>
                     <div class="product-count">
-                        <div>-</div>
-                        <div>0</div>
-                        <div>+</div>
+                        <button class="minus">
+                            <span>-</span>
+                        </button>
+                        <span class="product-count-text">1</span>
+                        <button class="plus">
+                            <span>+</span>
+                        </button>
                     </div>
                 </div>
                 <div>
